gcc/testsuite/rust/rustc/ui/match/issue-91058.rs
struct S(());

fn main() {
    let array = [S(())];

    match array {
        [()] => {}
// { dg-error ".E0308." "" { target *-*-* } .-1 }
        _ => {}
    }
}

